--- a/notebook/CIFAR10.ipynb
+++ b/notebook/CIFAR10.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "In this notebook, we will be mainly working with PyTorch for building and training ConvNets on CIFAR10 Dataset. Using PyTorch makes things more easier to understand however, whatever we do here must be similar in TensorFlow as well. \n",
     "\n",
-    "*Note : The python scripts for this notebook will be slightly different from this notebook. But all the concepts used will be the same.*"
+    "*Note : The python scripts for this notebook will be slightly different from this notebook. But all the concepts used will be the same. Also please move this notebook to main project directory.*"
    ]
   },
   {
@@ -52,9 +52,7 @@
     "\n",
     "The batches has been created using cPickle. Each batch is an array of shape (10000,3072) where 10,000 is number of images and 3072 is the pixel values of the image.\n",
     "\n",
-    "Extracting the dataset according to the method suggested in the [CIFAR-10 Website](https://www.cs.toronto.edu/~kriz/cifar.html).\n",
-    "\n",
-    "*Note : Please move this notebook to main project directory.*"
+    "Extracting the dataset according to the method suggested in the [CIFAR-10 Website](https://www.cs.toronto.edu/~kriz/cifar.html).\n"
    ]
   },
   {
